[Fix]: Overflow

--- a/Garage/Applications/Password Generator/scss/main.scss
+++ b/Garage/Applications/Password Generator/scss/main.scss
@@ -30,6 +30,11 @@
 
         overflow-x: scroll;
 
+        word-break: keep-all;
+
+        padding: 0 3rem;
+        padding-left: 40rem;
+
         @include content-center;
     }
 
